@@ -19,6 +19,7 @@ This is a ***backwards-incompatible*** release.
      * [Install-Junction](http://get-carbon.org/help/2.0/Install-Junction.html)
      * [Install-User](http://get-carbon.org/help/2.0/Install-User.html)
      * [Grant-ComPermissions](http://get-carbon.org/help/2.0/Grant-ComPermissions.html)
+     * [Install-IisApplication](http://get-carbon.org/help/2.0/Install-IisApplication.html)
  * [Install-Service](http://get-carbon.org/help/2.0/Grant-ComPermissions.html) now returns `ServiceController` objects instead of `sc.exe` output.
  * The following commands no longer return the stdout from various console applications. To see that output, use the `-Verbose` switch. Remove any usage of the output you were processing.
      * [Disable-FirewallStatefulFtp](http://get-carbon.org/help/2.0/Disable-FirewallStatefulFtp.html)
@@ -39,6 +40,7 @@ This is a ***backwards-incompatible*** release.
  * Remove usages of `[Carbon.Lsa]::LookupPrivilegeValue` class method. It was incorrectly exposed as a public method.
  * Remove usages of `[Carbon.Kernel32]::LocalFree` class method. It was incorrectly exposed as a public method.
  * Update usages of `Carbon.Computer.ProgramInstallInfo`'s `Version` property (returned by [Get-ProgramInstallInfo](http://get-carbon.org/help/2.0/Get-ProgramInstallInfo.html)). It was an `int` and is now a [Version](http://msdn.microsoft.com/en-us/library/y0hf9t2e.aspx) object.
+ * If you're not providing a value for [Install-IisApplication](http://get-carbon.org/help/2.0/Install-IisApplication.html)'s `AppPoolName` parameter, our application's app pool will be reset to `DefaultAppPool`. If you don't want this behaviour, pass the app pool you want to use.
  
 ## Changes Since `alpha.26`
 
@@ -67,6 +69,8 @@ This is a ***backwards-incompatible*** release.
  * Added improved error handling to [Remove-Junction](http://get-carbon.org/help/2.0/Remove-Junction.html).
  * [Install-Service](http://get-carbon.org/help/2.0/Install-Service.html) now supports service startup parameters/arguments.
  * New [Test-TypeDataMember](http://get-carbon.org/help/2.0/Install-Service.html) for testing if a type has an extended type member defined.
+ * [Install-IisApplication](http://get-carbon.org/help/2.0/Install-IisApplication.html) now returns a `Microsoft.Web.Administration.Application` object when creating/modifying an application. If an application is unchanged, nothing is returned.
+ * [Install-IisApplication](http://get-carbon.org/help/2.0/Install-IisApplication.html) now resets an application's app pool to `DefaultAppPool` if no app pool name is provided with the `AppPoolName` parameter.
 
  
 ## Enhancements
@@ -124,6 +128,11 @@ This is a ***backwards-incompatible*** release.
 ### Hosts File
 
  * [Set-HostsEntry](http://get-carbon.org/help/2.0/Set-HostsEntry.html)'s IPAddress parameter is now a `System.Net.IPAddress` object.  Previously it was a string validated with a regular expression.
+
+### IIS
+
+ * [Install-IisApplication](http://get-carbon.org/help/2.0/Install-IisApplication.html) now returns a `Microsoft.Web.Administration.Application` object when creating/modifying an application. If an application is unchanged, nothing is returned.
+ * [Install-IisApplication](http://get-carbon.org/help/2.0/Install-IisApplication.html) now resets an application's app pool to `DefaultAppPool` if no app pool name is provided with the `AppPoolName` parameter.
 
 ### PowerShell
 
